--- a/css/styles.css
+++ b/css/styles.css
@@ -104,3 +104,23 @@ body {
     font-size: 1.25rem;
   }
 }
+#personal-quote {
+  position: fixed;
+  width: 12em;
+  display: inline-block;
+  left: 50%;
+  margin-left: -6em;
+  bottom: 90px;
+  border-radius: 4px;
+  border: 2px solid #fff;
+  color: white;
+  background-color: #36b55c;
+  padding: 15px 0;
+  transition: .5s ;
+}
+#personal-quote:hover {
+  background-color: rgba(255,165,0);
+}
+#personal-quote:focus {
+  outline: none;
+}
